kube/redis.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
    labels:
        app: node-redis
spec:
    ports:
        - name: redis
          port: 6379
          targetPort: 6379
    type: NodePort
    selector:
        app: node-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
spec:
    selector:
        matchLabels:
            app: node-redis
    replicas: 1
    template:
        metadata:
            labels:
                app: node-redis
        spec:
            containers:
                - name: redis
                  image: redis:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 6379
